# cis441

project1A/: .project1A.cxx.swn  .project1A.cxx.swo  .project1A.cxx.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1A  project1A.cxx
project1B/: .project1B.cxx.swl  .project1B.cxx.swn  .project1B.cxx.swo  .project1B.cxx.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  differencer  project1B  project1B.cxx
project1B/jesse1B/: project1B.cxx
project1B/project1C/: project1B.cxx
project1D/: .project1D.cxx.swo  .project1D.cxx.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1D  project1D.cxx
project1D/partially done/: project1D.cxx
project1E/: .project1E.cxx.swo  .project1E.cxx.swp  .reader1e.cxx.swp  :w  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1E  project1E.cxx
start/: CMakeCache.txt  Makefile  cmake_install.cmake
